syntax = "proto3";

option csharp_namespace = "RoomService";
import "google/api/annotations.proto";
package greet;

service RoomService {

  rpc Create (CreateRoomReq) returns (APIResponse){
	  option(google.api.http) = {
		  post: "/api/v1/rooms",
		  body: "*"
	  };
  }

  rpc GetAllRoom(Empty) returns (APIResponse){
	  option(google.api.http) = {
		  get: "/api/v1/rooms"
	  };
  }
  rpc GetRoomById(GetByIdReq) returns (APIResponse){
	  option(google.api.http) = {
		  get: "/api/v1/rooms/{id}"
	  };
  }
}
// Get All
message Empty{}
message Room {
  int64 id = 1;
  string title = 2;
  float price = 3;
  string location = 4;
}
message RoomListResponse {
    repeated Room rooms = 1;
}

// Get By Id DTO
message GetByIdReq{
	int32 id = 1;
}

message GetByIdRes{
	string room_type = 1;
	int32 capacity = 2;
	string gender = 3;
	int32 price = 4;
	int32 deposit = 5;
	int32 electricity_cost = 6;
	int32 water_cost = 7;
	int32 internet_cost = 8;
	bool has_parking = 9;
	int32 parking_fee = 10;
	string location = 11;
	//repeated Utility utilities = 12;
	string title = 13;

}

// Create Room DTO
message CreateRoomReq {
  string room_type = 1;
  int32 capacity = 2;
  string gender = 3;
  int32 price = 4;
  int32 deposit = 5;
  int32 electricity_cost = 6;
  int32 water_cost = 7;
  int32 internet_cost = 8;
  bool has_parking = 9;
  int32 parking_fee = 10;
  string location = 11;
  string title = 13;
  string description = 14;
  string utilities = 15;
  string created_by = 16;
}
message CreateRoomRes {
    int32 id = 2;
}

 message Error{
	 
	 string message = 2;

 }

message Data{
	oneof datas{
		RoomListResponse room_list = 1;
		GetByIdRes room = 2;
		CreateRoomRes create_room = 3;
	}
}
message APIResponse {
	int32 status_code = 1;
	oneof result {
		Error error = 2;
		CreateRoomRes created_room_id = 3;
		GetByIdRes room = 4;
		RoomListResponse rooms = 5;
	}
}
